<resources>
    <string name="app_name">LumberjackRewards</string>
    <string name="title_activity_bottom_nav_bar">bottom_nav_bar</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_badges">Badges</string>
    <string name="title_settings">Settings</string>
    <string name="new_screen">New Screen</string>
    <string name="manage_users">Manage Students and Classes</string>
    <string name="remove">Remove Badge</string>
    <string name="add">Add Badge</string>
    <string name="back">BACK</string>
    <string name="settings">Settings</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="settings_nameplate">John Workman</string>
    <string name="settings_phone_number">(123) &#8211; 456 &#8211; 8910</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="night_mode">Night Mode</string>
    <string name="notification_icon">Notification Icon</string>
    <string name="security_icon">Security Icon</string>
    <string name="security_privacy">Security &amp; Privacy</string>
    <string name="sp_description">SP More Info</string>
    <string name="text_size">Text Size</string>
    <string name="contact_us">Contact Us</string>
    <string name="faq">FAQs</string>
    <string name="log_out">Log Out</string>
    <string name="adjust_your_text_size">Adjust your text size!</string>
    <string name="security_amp_privacy"><![CDATA[Security & Privacy]]></string>
    <string name="security_privacy_button">Security Privacy Button</string>
    <string name="create_badge">Create Badge</string>
    <string name="badge_completion_requirements">Badge Completion Requirements</string>
    <string name="c_badge">Create Badge</string>
    <string name="randomPrivacyText">In an increasingly digital world, businesses and organizations face constantly evolving threats. Fraud, data breaches, digital privacy, and more demand not only vigilance but specific expertise to counteract. In our online Master of Legal Studies in Compliance and Risk Management program, you’ll become immersed in this rapidly evolving regulatory space and learn to make vital decisions that protect your organization and its data.</string>
    <string name="privacy_amp_security"><![CDATA[Privacy & Security]]></string>
    <string name="privacy_and_information_technology">Privacy and Information Technology</string>
    <string name="welcome">Welcome,</string>
    <string name="LumberjackRewards">LUMBERJACK REWARDS</string>
    <string name="NewsAndUpdates">News &amp; Updates</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="save_changes">Save Changes</string>
    <string name="email">Email Address</string>
    <string name="Application_Role">Application Role</string>
    <string name="message_contents">Message Contents</string>
    <string name="submit">Submit</string>
    <string name="full_name">Full Name</string>
    <string name="add_a_badge">Add a Badge</string>
    <string name="badge_name">Badge Name</string>
    <string name="class_name">Class Name</string>
    <string name="badge_details">Badge Criteria</string>
    <string name="faq_s">FAQ\'s</string>
    <string name="stem_building">STEM Building</string>
    <string name="suite_312">Suite 312</string>
    <string name="p_o_box_13063_sfa_station_nacogdoches_texas_75962">P.O. Box 13063, SFA Station Nacogdoches, Texas 75962</string>
    <string name="mailing_address">Mailing Address</string>
    <string name="_936_468_2508">936.468.2508</string>
    <string name="phone">Phone</string>
    <string name="come_see_us">Come See Us!</string>
    <string name="todo">TODO</string>
    <string name="frequently_asked_quesitons">Frequently Asked Quesitons</string>
    <string name="manage">Manage</string>
    <string name="manage_classes">Manage Classes</string>
    <string name="manage_students">Manage Students</string>
    <string name="add_a_class">Add a Class</string>
    <string name="add_new_class">Add New Class</string>
    <string name="privacy_policy">Lumberjack Rewards Privacy Policy</string>
    <string name="personal_data">Personal Data</string>
    <string name="usage_data">Usage Data</string>
    <string name="retention_of_your_personal_data">Retention of Your Personal Data</string>
    <string name="privacy_text">While using Our Service, We may ask You to provide Us with certain personally identifiable information that can be used to contact or identify You. Personally identifiable information may include, but is not limited to:</string>
    <string name="bullet">•</string>
    <string name="phone_number">Phone Number</string>
    <string name="first_and_last_name">First and Last name</string>
    <string name="email_address">Email Address</string>
    <string name="usage_text">Usage Data is collected automatically when using the Service. Usage Data may include information such as Your Device\'s Internet Protocol address (e.g. IP address), browser type, browser version, the pages of our Service that You visit, the time and date of Your visit, the time spent on those pages, unique device identifiers and other diagnostic data. When You access the Service by or through a mobile device, We may collect certain information automatically, including, but not limited to, the type of mobile device You use, Your mobile device unique ID, the IP address of Your mobile device, Your mobile operating system, the type of mobile Internet browser You use, unique device identifiers and other diagnostic data. We may also collect information that Your browser sends whenever You visit our Service or when You access the Service by or through a mobile device.</string>
    <string name="header">Lumberjack Rewards will retain Your Personal Data only for as long as is necessary for the purposes set out in this Privacy Policy. We will retain and use Your Personal Data to the extent necessary to comply with our legal obligations (for example, if we are required to retain your data to comply with applicable laws), resolve disputes, and enforce our legal agreements and policies. Lumberjack Rewards will also retain Usage Data for internal analysis purposes. Usage Data is generally retained for a shorter period of time, except when this data is used to strengthen the security or to improve the functionality of Our Service, or We are legally obligated to retain this data for longer time periods.</string>
    <string name="privacy_changes">Changes to this Privacy Policy</string>
    <string name="changes_privacy">We may update Our Privacy Policy from time to time. We will notify You of any changes by posting the new Privacy Policy on this page. We will let You know via email and/or a prominent notice on Our Service, prior to the change becoming effective and update the Last updated date at the top of this Privacy Policy. You are advised to review this Privacy Policy periodically for any changes. Changes to this Privacy Policy are effective when they are posted on this page.</string>
    <string name="lumberjack_rewards">Lumberjack Rewards</string>
    <string name="what_is_LR">A: Lumberjack Rewards is an application developed for Stephen F. Austin State University\'s Computer Science department. Its primary purpose is to identify students who may be at risk of failing their courses or dropping out of their degree plans and provide them with motivation and positive reinforcement to exhibit good academic practices.</string>
    <string name="who_uses">Q: Who can use Lumberjack Rewards?</string>
    <string name="who_uses_txt">A: Lumberjack Rewards is exclusively for Stephen F. Austin State University\'s Computer Science students.</string>
    <string name="what_isLR">Q: What is Lumberjack Rewards?</string>
    <string name="policy_txt">This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You. We use Your Personal data to provide and improve the Service. By using the Service, You agree to the collection and use of information in accordance with this Privacy Policy.</string>
    <string name="download">Q: Can I download Lumberjack Rewards on my phone?</string>
    <string name="download_txt">A: Yes, Lumberjack Rewards will be available for download on the Google Play Store and App Store.</string>
    <string name="how_to_account">Q: How do I create an account on Lumberjack Rewards?</string>
    <string name="create_acct_txt">A: You can create an account on Lumberjack Rewards by using your SFA Jacks email address and student ID to authenticate your student status.</string>
    <string name="badge_type">Q: What kind of badges can I earn on Lumberjack Rewards?</string>
    <string name="badge_type_txt">A: You can earn badges related to your enrolled courses, extracurricular activities, and habits that promote academic success. Each badge has a name, description, and criteria for completion to inform users what needs to be obtained for their badge.</string>
    <string name="tracking_">Q: How do I track my badge progress on Lumberjack Rewards?</string>
    <string name="tracking_txt">A: You can track your badge progress on your personal dashboard that is unique to your account. It will show you an overview of currently tracked achievements, recently completed achievements, newly added achievements, and important notifications.</string>
    <string name="user_progress_txt">Q: Can I see other users\' badge progress on Lumberjack Rewards?</string>
    <string name="user_progess1">A: Yes, you can view other users\' badge progress on their user profile. You can also follow other users to get notified about recent badges that have been earned or posted on the public board.</string>
    <string name="admin_txt">Q: How are administrator accounts different from student accounts on Lumberjack Rewards?</string>
    <string name="admin_long_txt">A: Administrator accounts are created for SFA faculty members who wish to join the application. These user accounts will be displayed differently than student accounts in the application. Administrator accounts will also be able to moderate student badge progress, leaderboards, and push notifications to other users.</string>
    <string name="back_button">Back Button</string>
</resources>