<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ContactUs" >
    <!-- Top Navbar -->
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!-- Top Navigation Bar -->
        <LinearLayout
            android:id="@+id/textSizeNavBar"
            android:layout_width = "match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <RelativeLayout
                android:layout_width = "match_parent"
                android:layout_height="wrap_content"
                android:background="@color/purple_401"
                tools:ignore="UselessParent">

                <Button
                    android:id="@+id/backButton"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:text="@string/back"
                    android:textColor = "@color/white"
                    android:layout_marginStart="-10dp"
                    />
                <!-- app:icon="@drawable/back_btn" -->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text = "@string/contact_us"
                    android:layout_centerInParent = "true"
                    android:textColor = "@color/white"
                    android:textStyle= "bold"
                    android:textSize = "18sp"
                    android:visibility="visible"
                    />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="48dp"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="Full  Name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:hint="Email"
            android:inputType="textEmailAddress" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:textColor="#fff"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/design_default_color_primary_variant"
            android:gravity="top"
            android:hint="@string/message_contents"
            android:fitsSystemWindows="true"
            android:breakStrategy="balanced"
            android:inputType="textMultiLine"
            android:singleLine="false"
            android:padding="5dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            android:layout_width="450dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_back_secondary_200"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_height="40dp" />

    </LinearLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_nav_menu"/>
</RelativeLayout>