<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ActivityAddBadge" >
    <!-- Top Navbar -->
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!-- Top Navigation Bar -->
        <LinearLayout
            android:id="@+id/textSizeNavBar"
            android:layout_width = "match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <RelativeLayout
                android:layout_width = "match_parent"
                android:layout_height="wrap_content"
                android:background="@color/purple_700"
                tools:ignore="UselessParent">

                <Button
                    android:id="@+id/btnBackButton"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:text="@string/back"
                    android:textColor = "@color/white"
                    android:layout_marginStart="-10dp"
                    />
                <!-- app:icon="@drawable/back_btn" -->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text = "Add a Badge"
                    android:layout_centerInParent = "true"
                    android:textColor = "@color/white"
                    android:textStyle= "bold"
                    android:textSize = "18sp"
                    android:visibility="visible"
                    />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="48dp"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/etBadgeName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="Badge Name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etClassName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="Class Name"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/design_default_color_primary_variant"
            android:breakStrategy="balanced"
            android:fitsSystemWindows="true"
            android:gravity="top"
            android:hint="@string/badge_completion_requirements"
            android:inputType="textMultiLine"
            android:padding="5dp"
            android:singleLine="false"
            android:textColor="#fff" />

        <Button
            android:id="@+id/btnCreateBadge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/design_default_color_primary"
            android:elevation="4dp"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            android:text="@string/create_badge"
            android:textColor="#fff"
            />

    </LinearLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView
    android:id="@+id/bottom_navigation"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_alignParentBottom="true"
    app:menu="@menu/bottom_nav_menu"/>
</RelativeLayout>